--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "functions/fetch/ChinaAQIData"]
 	path = functions/fetch/ChinaAQIData
-	url = git@github.com:openaq/ChinaAQIData.git
+	url = https://github.com/openaq/ChinaAQIData.git
